# try-python-pptx

./: .gitignore  pyproject.toml
data/: template_example.pptx
examples/: access_template_elements.py  add_figure.py  add_slide.py  add_table.py  add_textbox.py  create_presentation.py
